27.mar (ws)
      - fix #5091: Parethesized accidentals not played back
      - fix #5100: Multi-measure rest display issue for non-full-measure
      - fix #5092: Tremolos can't be dragged to note-stem
      - fix #5095: Articulations move when new instrument inserted
      - fix #5096: Grace notes not erased on paste
      - fix #4902-2: Chordnames not transposed
      - fix #3748: Tuplet and Tie bug
      - fix #4977: Tuplet corruption
25.mar (la)
      - fix #5068: Custom key signature crashes on add measures
      - fix #5067: Wrong note values with some dotted notes when beamed
      - fix arpeggios playback
24.mar (la)
      - fix #4441: Create new key signature no longer works
22.mar (la)
      - fix #5037: Dotted slurs corrupted in print and .pdf export
21.mar (ws)
      - fix #4980: Normal bar line incompatibility
      - fix #4970: Part appears empty
       (la)
      - fix #5029: Solo and Mute checked at the same time
       (db)
      - Notes > Transpose has chord names and key signatures marked by default
20.mar (la)
      - fix #5015 cursor doesn't respond to (Ctrl+)right/left keys in Entry mode.
      - fix #5024 solo in mixer is not working
      - fix #4102 ability to solo multiple instruments at once
17.mar (ws)
      - update for overture import filter from Van Ferry:
            1. note stem direction sometimes wrong. (Fixed)
            2. the stop position of some Wedge (Hairpin) is wrong. (Fixed)
            3. the stop position of some Octave Shift (Ottava) is wrong. (Fixed)
      - fix #4198: notehead position after adding a second below
      - fix #4997: Courtesy accidentals not read
      - fix #4973: Staff lines extend beyond bar line
      - fix #4902: Chordnames not transposed
       (la)
      - fix #4174: Arrow left or right then undo deletes lyric syllables
15.mar (la)
      - add playback for MIDI in even if not in note entry mode.
        Instrument is first selected staff or first staff
14.mar (ws)